--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "twilio": "^3.83.2"
   }
 }
