--- a/client-side/package.json
+++ b/client-side/package.json
@@ -26,6 +26,7 @@
     "@paystack/inline-js": "^2.12.6",
     "@syncfusion/ej2-ng-charts": "^16.2.50",
     "angular-paystack": "^1.0.0",
+    "angular-toastify": "^1.0.4",
     "angular4-paystack": "^3.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
