addmoney method: bank transfer copying the account number done

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -28,6 +28,7 @@
     "angular-paystack": "^1.0.0",
     "angular-toastify": "^1.0.4",
     "angular4-paystack": "^3.0.2",
+    "ngx-clipboard": "^15.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
