--- a/client-side/package.json
+++ b/client-side/package.json
@@ -28,7 +28,10 @@
     "angular-paystack": "^1.0.0",
     "angular-toastify": "^1.0.4",
     "angular4-paystack": "^3.0.2",
+    "echarts": "^5.4.1",
+    "echarts-for-angular": "^0.4.0",
     "ngx-clipboard": "^15.1.0",
+    "ngx-echarts": "^15.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
